--- a/CSS/events.css
+++ b/CSS/events.css
@@ -496,6 +496,9 @@ h4{
 .container-modal{
   background-color: #24146C;
 }
+.edit-container{
+  background-color: #24146C;
+}
 #email{
   text-align: start;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -585,7 +588,7 @@ label{
 
 }
 .container-modal-edit{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email1{
   text-align: start;
