--- a/CSS/prArchives.css
+++ b/CSS/prArchives.css
@@ -1,20 +1,70 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #24146C;
+  font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .dropdown-container {
-  color: #1D5D9B;
+  color: #24146C;
  
   display: none;
 }
 
 .dropdown-container a {
   text-decoration: none;
-  color: #1D5D9B;
+  color: #24146C;
+}
+
+.sidebar-list-item1 button {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #24146C;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+.container-fluid{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+
+
+
+
+.dropdown-container {
+  color: #24146C;
+ 
+  display: none;
+}
+
+.dropdown-container a {
+  text-decoration: none;
+  color: #24146C;
+}
+
+.sidebar-list-item1 button {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #24146C;
+  display: block;
+  border: none;
+  background: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
 }
 .icon-spacing {
   margin-right: 10px; /* Adjust the value as needed */
@@ -24,7 +74,12 @@
   display: flex;
   align-items: center;
 }
-
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #24146C;}
+  
 .dropdown-btn i {
   margin-right: 5px; /* Space between the star icon and the text */
 }
@@ -38,18 +93,10 @@
   margin-right: 10px; /* Space between the icons and the text */
 }
 
-.sidebar-list-item1 button {
-  padding: 15px;
-  text-decoration: none;
-  font-size: 14px;
-  color: #1D5D9B;
-  display: block;
-  border: none;
-  background: none;
-  width: 100%;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
+.container-fluid{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 }
 
 .dropdown-btn:hover {
@@ -95,7 +142,7 @@ th, tr, td {
   border: none;
   padding: 5px;
   margin: 5px;
-  width: 100px;
+  width: 5px;
   border-radius: 5px;
   text-transform: uppercase;
   margin-top: 10px;
@@ -104,9 +151,7 @@ th, tr, td {
   cursor: pointer;
 }
 
-.btn_useracc {
-  display: flex;
-}
+
 
 .con-lic, .con-mv {
   padding: 5px 10px;
@@ -118,7 +163,7 @@ th, tr, td {
 
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
-  color: #1D5D9B;
+  color: #24146C;
 }
 
 .dropdown-container.show {
@@ -128,12 +173,43 @@ th, tr, td {
     vertical-align: middle;
     line-height: 1px;
   }
-  #dash-logo{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
-    font-weight: bolder;
-    color: #1D5D9B;  
-}
+  
+    .text-primary {
+      color: #666666;
+    }
+    
+    .text-blue {
+      color: #032d89;
+    }
+    
+    .text-red {
+      color: #cc3c43;
+    }
+    
+    .text-green {
+      color: #367952;
+    }
+    
+    .text-orange {
+      color: #f5b74f;
+    }
+  
+  .font-weight-bold {
+    font-weight: 300;
+  }
+  
+  /*.grid-container {
+    display: grid;
+    grid-template-columns: 260px 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+      "sidebar header header header"
+      "sidebar main main main";
+    height: 100vh;
+  }
+  
+  
+  /* ---------- HEADER ---------- */
   
   .header {
     grid-area: header;
@@ -308,7 +384,7 @@ th, tr, td{
 border: none;
 padding: 5px;
 margin: 5px;
-width: 100px;
+width: 50px;
 border-radius: 5px;
 text-transform: uppercase;
 margin-top: 10px;
@@ -316,35 +392,23 @@ margin-bottom: 10px;
 background-color: rgb(223, 217, 217);
 cursor: pointer;
 }
+#permanentlyDelete{
+  border: none;
+  padding: 5px;
+  margin: 5px;
+  width: 50px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(223, 217, 217);
+  cursor: pointer;
+  }
 #enabledTourist{
  border: none;
 padding: 5px;
 margin: 5px;
-width: 200px;
-border-radius: 5px;
-text-transform: uppercase;
-margin-top: 10px;
-margin-bottom: 10px;
-background-color: rgb(223, 217, 217);
-cursor: pointer;
-}
-#bckbtn{
-border: none;
-padding: 5px;
-margin: 5px;
-width: 100px;
-border-radius: 5px;
-text-transform: uppercase;
-margin-top: 10px;
-margin-bottom: 10px;
-background-color: rgb(223, 217, 217);
-cursor: pointer;
-}
-#enabledTourist{
- border: none;
-padding: 5px;
-margin: 5px;
-width: 200px;
+width: 50px;
 border-radius: 5px;
 text-transform: uppercase;
 margin-top: 10px;
@@ -364,7 +428,7 @@ cursor: pointer;
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: #1D5D9B; 
+    background-color: #24146C; 
     color: white;
     cursor: pointer;
 }
@@ -377,7 +441,7 @@ tr th, tr th{
     background-color: #f2f2f23b;
 }
 .table tr:hover{
-    background: gainsboro;
+  background-color: #24146C
  }
 h4{
   align-items: end;
@@ -385,7 +449,7 @@ h4{
   cursor: pointer;
 }
 .selected-row{
-  background-color: #1D5D9B !important;
+  background-color: #24146C !important;
   color: white;
 }
 #srchText{
@@ -488,7 +552,7 @@ h4{
 
 /* popup modal for create account */
 .reg-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -503,7 +567,7 @@ h4{
 
 }
 .container-modal{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email{
   text-align: start;
@@ -583,7 +647,7 @@ label{
 }
 /* popup modal for edit account */
 .edit-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -598,7 +662,7 @@ label{
 
 }
 .container-modal-edit{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email1{
   text-align: start;
@@ -828,17 +892,14 @@ label{
   letter-spacing: 3px;
   text-align: center;
 }
-
-#cnl_promo3{
+#cnl2{
   margin-left: 300px;
 }
-#dash-logo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 35px;
-  font-weight: bolder;
-  color: #1D5D9B;}
-  
-.btn_promo3 button{
+.cnl{
+  margin-left: 300px;
+}
+
+.btn button{
 	padding: 4px;
 	width: 100px; 
   outline: none;
@@ -851,6 +912,6 @@ label{
   background-color: var(--blueButton);
   color:black;
 }
-.btn_promo3{
+.btn{
     display: flex;
 }
