--- a/CSS/reviews.css
+++ b/CSS/reviews.css
@@ -3,25 +3,28 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #24146C;
+  font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .dropdown-container {
-  color: #1D5D9B;
+  color: #24146C;
  
   display: none;
 }
 
 .dropdown-container a {
   text-decoration: none;
-  color: #1D5D9B;
+  color: #24146C;
 }
 
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
-  font-size: 14px;
-  color: #1D5D9B;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #24146C;
   display: block;
   border: none;
   background: none;
@@ -29,6 +32,39 @@
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+.container-fluid{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+
+
+
+.dropdown-btn {
+
+  background: none;
+  border: none;
+  font-size: 14px; /* Adjust font size as needed */
+  cursor: pointer;
+}
+
+.dropdown-btn span {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the text and the dropdown icon */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
 }
 
 .dropdown-btn:hover {
@@ -41,7 +77,7 @@
 
 .main {
   margin-left: 200px;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .dropdown-container {
@@ -59,14 +95,7 @@
   padding: 20px 20px;
 }
 
-.main-title {
-  display: flex;
-  justify-content: space-between;
-}
 
-.main-title > p {
-  font-size: 20px;
-}
 
 table tr {
   padding: 4px;
@@ -81,7 +110,7 @@ th, tr, td {
   border: none;
   padding: 5px;
   margin: 5px;
-  width: 100px;
+  width: 9px;
   border-radius: 5px;
   text-transform: uppercase;
   margin-top: 10px;
@@ -94,105 +123,105 @@ th, tr, td {
   display: flex;
 }
 
-.outer-wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  overflow-x: auto;
-  overflow-y: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.table-wrapper {
-  width: 100%;
-  overflow-y: auto;
-  margin-bottom: 20px;
-}
-
 .con-lic, .con-mv {
   padding: 5px 10px;
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: #1D5D9B;
+  
 }
 
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
-  color: #1D5D9B;
+  color: #24146C;
 }
 
 .dropdown-container.show {
   display: block;
 }
-.icon-spacing {
-  margin-right: 10px; /* Adjust the value as needed */
-}
-
-.dropdown-btn {
-  display: flex;
-  align-items: center;
-}
-
-.dropdown-btn i {
-  margin-right: 5px; /* Space between the star icon and the text */
-}
-#dash-logo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 35px;
-  font-weight: bolder;
-  color: #1D5D9B;}
-  
-.con-lic {
-  display: flex;
-  align-items: center;
-}
-
-.con-lic i {
-  margin-right: 10px; /* Space between the icons and the text */
-}
-
-
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
   }
   
-    .text-primary {
-      color: #666666;
-    }
-    
-    .text-blue {
-      color: #032d89;
-    }
-    
-    .text-red {
-      color: #cc3c43;
-    }
-    
-    .text-green {
-      color: #367952;
-    }
-    
-    .text-orange {
-      color: #f5b74f;
-    }
   
-  .font-weight-bold {
-    font-weight: 300;
+  body{
+    display: block;
+}
+.sidenav{
+  color: black;
+  font-size: 14px;
+  
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
   }
-  
-  /*.grid-container {
-    display: grid;
-    grid-template-columns: 260px 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      "sidebar header header header"
-      "sidebar main main main";
-    height: 100vh;
-  }
-  
+}
+.month {
+  text-align: center;
+  padding: 1px;  /* Adjusted padding */
+  background: #24146C;
+  color: white;
+  width: 5px;
+  height: 30%; /* Adjusted width */
+  font-size: 10px; /* Adjusted font size */
+}
+#date{
+  width: 9px;
+
+}
+.month ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.month ul li {
+  font-size: 8px;  /* Adjusted font size */
+  text-transform: uppercase;
+  letter-spacing: 1px;  /* Adjusted letter-spacing */
+}
+.month .prev,
+.month .next {
+  cursor: pointer;
+}
+.weekdays {
+  margin: 0;
+  padding: 0;  /* Adjusted padding */
+  background-color: #ddd;
+  width: 50px;  /* Adjusted width */
+  font-size: 10px;  /* Adjusted font size */
+}
+.weekdays li {
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
+}
+.days {
+  padding: 1px;  /* Adjusted padding */
+  background: #eee;
+  margin: 0;
+  width: 500px;  /* Adjusted width */
+  font-size: 10px;  /* Adjusted font size */
+}
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13.6%;
+  text-align: center;
+  margin-bottom: 1px;  /* Adjusted margin-bottom */
+  font-size: 8px;  /* Adjusted font size */
+  color: #777;
+}
+.days li.active {
+  padding: 2px;  /* Adjusted padding */
+  background: #F4D160;
+  color: white !important;
+}
+
   
   /* ---------- HEADER ---------- */
   
@@ -211,97 +240,30 @@ th, tr, td {
     display: none;
   }
   
-  
- /* ---------- SIDEBAR ---------- */
-  
- #sidebar {
-  grid-area: sidebar;
-  height: 300%;
-  background-color: white;
  
-  overflow-y: auto;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
-
-.sidebar-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 15px 0px 25px;
-  margin-bottom: 30px;
-}
-
-.sidebar-title > span {
-  display: none;
-}
-
-.sidebar-brand {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.sidebar-list {
-  padding: 0;
-  margin-top: 15px;
-  list-style-type: none;
-}
-
-.sidebar-list-item {
-  padding: 20px 15px 20px 20px;
-}
-
-.sidebar-list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-}
-
-.sidebar-list > a {
-  text-decoration: none;
-  color: white;
-}
-#sidebar ul ul li {    
-list-style: none;
-padding: 10px 20px 10px 10px;
-display: none;
-}
 
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
-font-size: 20px; /* Increased text to enable scrolling */
+font-size: 12px; /* Increased text to enable scrolling */
 /* padding: 0px 10px; */
 }
 
-
-
-  .sidebar-responsive {
-    display: inline !important;
-    position: absolute;
-    /*
-      the z-index of the ApexCharts is 11
-      we want the z-index of the sidebar higher so that
-      the charts are not showing over the sidebar 
-      on small screens
-    */
-    z-index: 12 !important;
-  }
-  
-  
   /* ---------- MAIN ---------- */
   
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
+    padding: 2px;
   }
+  .container-fluid{
+    border-radius: 2%;
+    border-color: black;
+     box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
+     
+  } 
   
-  .main-title {
-    display: flex;
-    justify-content: space-between;
-  }
-  
+ 
   .main-title > p {
     font-size: 20px;
   }
@@ -313,11 +275,42 @@ th, tr, td{
     padding: 7px;
     text-align: left;
 }
+
+
+.sidenav h2, .sidenav a {
+  color: white;
+}
+
+.nav-pills > li > a {
+  color: #24146C;
+}
+
+.nav-pills > li.active > a, 
+.nav-pills > li.active > a:focus, 
+.nav-pills > li.active > a:hover {
+  background-color: #24146C;
+  color: white;
+}
+
+.card {
+  background-color: #f1f1f1;
+  border: 1px solid #24146C;
+}
+
+.card h4, .card p {
+  color: #24146C;
+}
+
+.well {
+  background-color: #24146C;
+  color: white;
+}
+
 .btn_useracc button{
     border: none;
     padding: 5px;
     margin: 5px;
-    width: 100px;
+    width: 70px;
     border-radius: 5px;
     text-transform: uppercase;
     margin-top: 10px;
@@ -328,30 +321,6 @@ th, tr, td{
 .btn_useracc{
   display: flex;
 }
-#category{
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
- font-weight: bold;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
-#category1{
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
- font-weight: bold;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- 
-}
 #archived_acc{
     border: none;
     padding: 5px;
@@ -361,8 +330,8 @@ th, tr, td{
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: #1D5D9B; 
-    color: white;
+    background-color: wheat; 
+    color: #24146C;
     cursor: pointer;
 }
 tr th, tr th{
@@ -382,13 +351,13 @@ h4{
   cursor: pointer;
 }
 .selected-row{
-  background-color: #1D5D9B !important;
+  background-color: #24146C !important;
   color: white;
 }
 #srchText{
   outline: none;
   border: 1px solid grey;
-  width: 350px;
+  width: 200px;
   height: 30px;
   font-size: 15px;
   align-items: end;
@@ -399,6 +368,15 @@ h4{
   text-transform: uppercase;
   /* margin-bottom: 10px; */
 }
+.invalid-input {
+  border: 3px solid red;
+}
+
+.valid-input {
+  border: 3px solid green;
+}
+
+
 .btn1 button{
   padding: 4px;
   padding: 10px;
@@ -418,8 +396,9 @@ h4{
   user-select: none;
 }
   /* Medium <= 992px */
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 1000px) {
     .grid-container {
+
       grid-template-columns: 1fr;
       grid-template-rows: 0.2fr 3fr;
       grid-template-areas:
@@ -485,7 +464,7 @@ h4{
 
 /* popup modal for create account */
 .reg-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -499,8 +478,23 @@ h4{
   display: none;
 
 }
+/* popup modal for create account */
+#cal-date{
+  border: none;
+    padding: 5px;
+    margin: 5px;
+    width: 30px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(223, 217, 217);
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .container-modal{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email{
   text-align: start;
@@ -519,12 +513,7 @@ textarea {
   font-size: 14px;
 }
 
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
+
 
 input {
   padding: 10px;
@@ -536,12 +525,13 @@ input {
   font-size: 14px;
   
 }
+
 #input{
   display: block;
  
 }
 #btnRegister{
-  width: 150px;
+  width: 100px;
   height: 30px;
   display: block;
   margin: 10px auto; 
@@ -580,7 +570,7 @@ label{
 }
 /* popup modal for edit account */
 .edit-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -621,12 +611,7 @@ textarea {
   height: 150px;
 }
 
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
+
 input {
   padding: 10px;
   margin-bottom: 10px;
@@ -869,7 +854,7 @@ label{
 
 .btn button{
 	padding: 4px;
-	width: 150px; 
+	width: 100px; 
   outline: none;
 	padding: 10px;
   margin: 10px;
@@ -883,3 +868,12 @@ label{
 .btn{
     display: flex;
 }
+input[type="text"], input[type="date"], textarea {
+  text-transform: uppercase;
+}
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
