--- a/CSS/dishes.css
+++ b/CSS/dishes.css
@@ -330,7 +330,7 @@ th, tr, td{
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: wheat; 
+    background-color: #1D5D9B; 
     color: #24146C;
     cursor: pointer;
 }
