--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -1,9 +1,8 @@
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #24146C;
+  color: black;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -12,9 +11,8 @@
 .sidenav h2, .sidenav a {
   color: white;
 }
-
 .nav-pills > li > a {
-  color: #24146C;
+  color: black;
 }
 
 .nav-pills > li.active > a, 
@@ -27,20 +25,30 @@
   background-color: #24146C;
   color: white;
 }
+
 .card {
   background-color: #f1f1f1;
   border: 1px solid #24146C;
+  border-radius: 10px;
+  box-shadow: 1 5px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin: 8px;
+  font-size: 12px;
+  text-align:center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .card h4, .card p {
-  color: #24146C;
+  color: black;
 }
 
 .well {
   background-color: #24146C;
   color: white;
 }
-
+.hamburger-menu {
+  display: block;
+}
 
 #dash-logo img {
   width: 60px;
@@ -48,9 +56,12 @@
 }
 
 #dash_label {
-  color: #24146C;
-  font-weight: bold;
-  font-size: 24px;
+  color: black;
+  font-weight: bolder;
+  font-size: 40px;
+  padding: 5px;
+  background-color: whitesmoke;
+
   margin: 20px 0;
 }
 
@@ -69,11 +80,11 @@
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #24146C;
   display: block;
-  border: none;
+  border: 9px;
   background: none;
   width: 100%;
   text-align: left;
@@ -81,8 +92,7 @@
   outline: none;
 }
 .container-fluid{
-  font-size: 14px;
-  color: #24146C;
+  font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
@@ -147,7 +157,6 @@ ul,li,a{
 }
 
 
-
 table tr {
   padding: 4px;
 }
@@ -193,8 +202,8 @@ th, tr, td {
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 2%;
-    padding: 2px;
+    margin: 1.5%;
+    padding: 5px;
     
 }
 body{
@@ -207,6 +216,7 @@ body{
   'Segoe UI', Roboto, Oxygen, Ubuntu, 
   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+
 }
 
 h2{
@@ -217,7 +227,7 @@ h2{
 }
 h4{
 
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
   
 }
@@ -243,7 +253,7 @@ p{
 }
 
 h1{
-    font-size: 16px;
+    font-size: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
 }
@@ -280,29 +290,23 @@ button{
 @media screen and (max-width: 1000px) {
   .column {
     width: 1000px;
+    border: #24146C;
     display: block;
    
   }
 }
 
 
-/* Style the counter cards */
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  padding: 15px;
-  margin: 15px;
-  background-color: whitesmoke;
-  color: white;
-  
-}
+
 .row:after {
   content: "";
   display: table;
   clear: both;
 }
+
 .column {
   float: left;
-  width: 23%;
+  width: 20%;
   padding: 0;
   
   
@@ -320,16 +324,8 @@ button{
     color: #F4D160;
     
  }
- #dash_label{
-    font-size: 30px;
-    font-weight: bold;
-    background-color: whitesmoke;
-    color: #24146C;
-    margin: 2%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     
- }
  .well{
   width: 820px;
  }
@@ -354,23 +350,7 @@ button{
   
 }
 
-  
-   
 
-  
-  /*.grid-container {
-    display: grid;
-    grid-template-columns: 260px 1fr 1fr 1fr;
-    grid-template-rows: 0.2fr 3fr;
-    grid-template-areas:
-      "sidebar header header header"
-      "sidebar main main main";
-    height: 100vh;
-  }
-  
-  
-  /* ---------- HEADER ---------- */
-  
   .header {
     grid-area: header;
     height: 70px;
@@ -441,47 +421,11 @@ list-style: none;
 padding: 10px 20px 10px 10px;
 display: none;
 }
-/*.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
-}
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
 
-/* On mouse-over */
-/*.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
-font-size: 20px; /* Increased text to enable scrolling */
+font-size: 15px; /* Increased text to enable scrolling */
 /* padding: 0px 10px; */
 }
 /* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
@@ -494,12 +438,7 @@ padding-left: 8px;
   .sidebar-responsive {
     display: inline !important;
     position: absolute;
-    /*
-      the z-index of the ApexCharts is 11
-      we want the z-index of the sidebar higher so that
-      the charts are not showing over the sidebar 
-      on small screens
-    */
+   
     z-index: 12 !important;
   }
   
@@ -712,22 +651,7 @@ tr th, tr th{
 .container-modal{
   background-color: #24146C;
 }
-#email{
-  text-align: start;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  color: black;
-}
-textarea {
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  height: 100px; /* Set the height as needed */
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
-}
+
 
 .dashboard-container {
   margin: 50px auto;
@@ -736,278 +660,22 @@ textarea {
  
 }
 
-input {
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
-  
-}
-#input{
-  display: block;
- 
-}
 
-#create-txt{
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 30px;
-  color: white;
-  
-}
+
+
+
 label{
-  font-size: 16px;
+  font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
 
-/* popup modal for edit account */
-
-
-textarea {
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  height: 100px; /* Set the height as needed */
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
-}
-
-#password{
-  font-size: 12px;
-  box-sizing: 35px;
-  size: 35px;
-  height: 150px;
-}
 
 .dashboard-container {
   margin: 50px auto;
   padding: 20px;
   border-radius: 5px;
  
-}
-input {
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
-  
-}
-
-#input{
-  display: block;
- 
-}
-
-#edit-txt{
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: 30px;
-  color: white;
-  
-}
-label{
-  font-size: 16px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: white;
-}
-.close-modal-edit{
-  position: absolute;
-  top: 2%;
-  right: 3%;
-  font-size: 18px;
-  z-index: 1;
-  cursor: pointer;
-  color: #F4D160;
-}
-
-/* EDIT MODAL */
-.modal-edit{
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  border-radius: 10px;
-  display: none;
-}
-.close-modal-edit{
-  position: absolute;
-  top: 2%;
-  right: 3%;
-  font-size: 18px;
-  z-index: 1;
-  cursor: pointer;
-}
-.modal-content-edit{
-  position: relative;
-  display: flex;   
-}
-.edit-info{
-  display: block;
-  margin-bottom: 10px;
-  align-items: center;
-}
-
-
-
-.modal-input-edit{
-  width: 280px;
-  padding: 0 5px 0 5px;
-  height: 30px;
-  font-size: 14px;
-  background: none;
-  outline: none;
-  text-transform: uppercase;
-  border-radius: 5px;  
-}
-.modal-input-edit-pass{
-  width: 280px;
-  padding: 0 5px 0 5px;
-  height: 30px;
-  font-size: 14px;
-  background: none;
-  outline: none;
-  border-radius: 5px;  
-}
-.modal-input-edit-btn{
-  height: 40px;
-  width: 70%;
-  border: 1px solid;
-  background-color: var(--blueButton);
-  font-size: 18px;
-  color: white;
-  font-weight: 700;
-  margin: 20px 0 0 80px;
-  border: none;
-  cursor: pointer;
-  border-radius: 10px; 
-  margin-bottom: 5px;
-  margin-top: 20px;
-  align-items: center;
-}
-.modal-input-edit-btn:hover{
-  background-color: rgb(48, 83, 211);
-  transition: all 0.4s ease-out;
-}
-.modal-input::placeholder{
-  color: var(--lightgray);
-}
-.edit-info p{
-  font-size: 11px;
-  color: var(--errorColor);
-  display: none;
-}
-.edit-info.error input{
-  position: relative;
-  border: 1px solid var(--errorColor);
-  border-radius: 2px;
-}
-.edit-info.valid input{
-  position: relative;
-  border: 1px solid var(--validColor);
-  border-radius: 2px;
-}
-.edit-info.error p{
-  display: block;
-}
-/* .modal#edit-modal.active{
-  filter: blur(10px);
-  user-select: none;
-} */
-
-
-#delete_acc_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-   visibility: hidden; 
-
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-}
-.cnfrm_modal{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
-}
-.cnfrm_modal_add{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
-}
-#cnfrm_add{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  display: none;
-}
-.cnfrm_modal h1, #delete_acc_modal h1{
-  letter-spacing: 3px;
-  text-align: center;
-}
-#cnl2{
-  margin-left: 300px;
-}
-.cnl{
-  margin-left: 300px;
-}
-#cnl3{
-  margin-left: 300px;
 }
 
 .btn button{
