--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -7,8 +7,11 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.sidenav h2, .sidenav a {
-  color: white;
+h2{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 50px;
+  font-weight: bolder;
+  color: #24146C;
 }
 
 .nav-pills > li > a {
@@ -19,7 +22,7 @@
 .nav-pills > li.active > a:focus, 
 .nav-pills > li.active > a:hover {
   background-color: #24146C;
-  color: white;
+
 }
 
 .card {
@@ -262,7 +265,7 @@ th, tr, td {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 50px;
     font-weight: bolder;
-    color: #1D5D9B;
+    color: #24146C;
 }
   
   .menu-icon {
