--- a/CSS/promotion.css
+++ b/CSS/promotion.css
@@ -2,57 +2,61 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #24146C;
+  color: black;
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.row {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.row.content {
+  height: 400px;
+}
+#row-content{
+  font-size: 14px;
+  font-family: system-ui, 
+  -apple-system, BlinkMacSystemFont, 
+  'Segoe UI', Roboto, Oxygen, Ubuntu, 
+  Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+
+}
 .sidenav h2, .sidenav a {
   color: white;
 }
-
 .nav-pills > li > a {
-  color: #24146C;
+  color: black;
 }
 
 .nav-pills > li.active > a, 
-.nav-pills > li.active > a:focus, 
+.nav-pills > li.active > a:focus 
+{
+  background-color: #24146C;
+  color: white;
+}
 .nav-pills > li.active > a:hover {
   background-color: #24146C;
   color: white;
 }
 
-.card {
-  background-color: #f1f1f1;
-  border: 1px solid #24146C;
-}
-
-.card h4, .card p {
-  color: #24146C;
-}
-
-.well {
-  background-color: #24146C;
-  color: white;
-}
-
-
 .dropdown-container {
-  color: #1D5D9B;
+  color: #24146C;
  
   display: none;
 }
 
 .dropdown-container a {
   text-decoration: none;
-  color: #1D5D9B;
+  color: #24146C;
 }
 
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
-  font-size: 14px;
-  color: #1D5D9B;
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #24146C;
   display: block;
   border: none;
   background: none;
@@ -60,6 +64,39 @@
   text-align: left;
   cursor: pointer;
   outline: none;
+}
+.container-fluid{
+  font-size: 16px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
+}
+
+
+
+.dropdown-btn {
+
+  background: none;
+  border: none;
+  font-size: 14px; /* Adjust font size as needed */
+  cursor: pointer;
+}
+
+.dropdown-btn span {
+  display: flex;
+  align-items: center;
+}
+
+.dropdown-btn i {
+  margin-right: 5px; /* Space between the text and the dropdown icon */
+}
+
+.con-lic {
+  display: flex;
+  align-items: center;
+}
+
+.con-lic i {
+  margin-right: 10px; /* Space between the icons and the text */
 }
 
 .dropdown-btn:hover {
@@ -72,7 +109,7 @@
 
 .main {
   margin-left: 200px;
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .dropdown-container {
@@ -86,7 +123,7 @@
 }
 
 .main-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 20px 20px;
 }
 
@@ -105,11 +142,12 @@ th, tr, td {
   border: none;
   padding: 5px;
   margin: 5px;
-  width: 70px;
+  width: 100px;
   border-radius: 5px;
   text-transform: uppercase;
   margin-top: 10px;
   margin-bottom: 10px;
+  font-size: 13px;
   background-color: rgb(223, 217, 217);
   cursor: pointer;
 }
@@ -125,56 +163,101 @@ th, tr, td {
   text-decoration: none;
   
 }
+
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
-  color: #1D5D9B;
-}
-.icon-spacing {
-  margin-right: 10px; /* Adjust the value as needed */
-}
-
-.dropdown-btn {
-  display: flex;
-  align-items: center;
-}
-#dash-logo {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 35px;
-  font-weight: bolder;
-  color: #1D5D9B;}
-  
-.dropdown-btn i {
-  margin-right: 5px; /* Space between the star icon and the text */
-}
-
-.con-lic {
-  display: flex;
-  align-items: center;
-}
-
-.con-lic i {
-  margin-right: 10px; /* Space between the icons and the text */
-}
-
-input[type="text"], input[type="date"], textarea {
-  text-transform: uppercase;
+  color: #24146C;
 }
 
 .dropdown-container.show {
   display: block;
 }
-
-
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
   }
-  #dash-logo{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 35px;
-    font-weight: bolder;
-    color: #1D5D9B;  
+  
+  
+  body{
+    display: block;
 }
+.sidenav{
+  color: black;
+  font-size: 14px;
+  
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 10px;
+  }
+}
+.month {
+  text-align: center;
+  padding: 1px;  /* Adjusted padding */
+  background: #24146C;
+  color: white;
+  width: 5px;
+  height: 30%; /* Adjusted width */
+  font-size: 10px; /* Adjusted font size */
+}
+#date{
+  width: 9px;
+
+}
+.month ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.month ul li {
+  font-size: 8px;  /* Adjusted font size */
+  text-transform: uppercase;
+  letter-spacing: 1px;  /* Adjusted letter-spacing */
+}
+.month .prev,
+.month .next {
+  cursor: pointer;
+}
+.weekdays {
+  margin: 0;
+  padding: 0;  /* Adjusted padding */
+  background-color: #ddd;
+  width: 50px;  /* Adjusted width */
+  font-size: 10px;  /* Adjusted font size */
+}
+.weekdays li {
+  display: inline-block;
+  width: 13.6%;
+  color: #666;
+  text-align: center;
+}
+.days {
+  padding: 1px;  /* Adjusted padding */
+  background: #eee;
+  margin: 0;
+  width: 500px;  /* Adjusted width */
+  font-size: 10px;  /* Adjusted font size */
+}
+.days li {
+  list-style-type: none;
+  display: inline-block;
+  width: 13.6%;
+  text-align: center;
+  margin-bottom: 1px;  /* Adjusted margin-bottom */
+  font-size: 8px;  /* Adjusted font size */
+  color: #777;
+}
+.days li.active {
+  padding: 2px;  /* Adjusted padding */
+  background: #F4D160;
+  color: white !important;
+}
+
+  
+  /* ---------- HEADER ---------- */
+  
   .header {
     grid-area: header;
     height: 70px;
@@ -190,137 +273,30 @@ input[type="text"], input[type="date"], textarea {
     display: none;
   }
   
-  
- /* ---------- SIDEBAR ---------- */
-  
- #sidebar {
-  grid-area: sidebar;
-  height: 100%;
-  background-color: #032d89;
-  color: white;
-  overflow-y: auto;
-  transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-}
+ 
 
-.sidebar-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 15px 0px 25px;
-  margin-bottom: 30px;
-}
-
-.sidebar-title > span {
-  display: none;
-}
-
-.sidebar-brand {
-  margin-top: 15px;
-  font-size: 20px;
-  font-weight: 700;
-}
-
-.sidebar-list {
-  padding: 0;
-  margin-top: 15px;
-  list-style-type: none;
-}
-
-.sidebar-list-item {
-  padding: 20px 15px 20px 20px;
-}
-
-.sidebar-list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-}
-
-.sidebar-list > a {
-  text-decoration: none;
-  color: white;
-}
-#sidebar ul ul li {    
-list-style: none;
-padding: 10px 20px 10px 10px;
-display: none;
-}
-/*.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
-}
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
-
-/* On mouse-over */
-/*.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
-font-size: 20px; /* Increased text to enable scrolling */
+font-size: 12px; /* Increased text to enable scrolling */
 /* padding: 0px 10px; */
 }
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-display: none;
-padding-left: 8px;
-}
 
-
-  .sidebar-responsive {
-    display: inline !important;
-    position: absolute;
-    /*
-      the z-index of the ApexCharts is 11
-      we want the z-index of the sidebar higher so that
-      the charts are not showing over the sidebar 
-      on small screens
-    */
-    z-index: 12 !important;
-  }
-  
-  
   /* ---------- MAIN ---------- */
   
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
+    padding: 2px;
   }
+  .container-fluid{
+    border-radius: 2%;
+    border-color: black;
+     box-shadow: 0 2px 5px #fff(0, 0, 0, 0.1);
+     
+  } 
   
-  .main-title {
-    display: flex;
-    justify-content: space-between;
-  }
-  
+ 
   .main-title > p {
     font-size: 20px;
   }
@@ -333,17 +309,35 @@ th, tr, td{
     text-align: left;
 }
 
-#promoArchive{
+
+
+.card {
+  background-color: #f1f1f1;
+  border: 1px solid #24146C;
+}
+
+.card h4, .card p {
+  color: #24146C;
+}
+
+.well {
+  background-color: #24146C;
+  color: white;
+}
+
+
+
+#archived_acc{
     border: none;
-    padding: 5px;
+    padding: 8px;
     margin: 5px;
     width: 120px;
     border-radius: 5px;
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: #1D5D9B; 
-    color: white;
+  
+    color: black;
     cursor: pointer;
 }
 tr th, tr th{
@@ -363,15 +357,15 @@ h4{
   cursor: pointer;
 }
 .selected-row{
-  background-color: #1D5D9B !important;
+  background-color: #24146C !important;
   color: white;
 }
 #srchText{
   outline: none;
   border: 1px solid grey;
-  width: 350px;
+  width: 200px;
   height: 30px;
-  font-size: 12px;
+  font-size: 15px;
   align-items: end;
   margin-left: auto;
   margin-top: 10px;
@@ -387,30 +381,8 @@ h4{
 .valid-input {
   border: 3px solid green;
 }
-#category{
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
- font-weight: bold;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-}
-#category1{
-  padding: 10px;
-  margin-bottom: 10px;
-  width: 100%;
-  background-color: white;
-  box-sizing: border-box;
-  border-radius: 10px;
-  font-size: 14px;
- font-weight: bold;
- font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
- 
-}
+
 .btn1 button{
   padding: 4px;
   padding: 10px;
@@ -421,7 +393,7 @@ h4{
   border:1px solid grey;
   color:black;
 }
-#cnl_promo2{
+#cnl{
   margin-left: 60%;
 }
 .grid-container#blur.active{
@@ -430,8 +402,9 @@ h4{
   user-select: none;
 }
   /* Medium <= 992px */
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 1000px) {
     .grid-container {
+
       grid-template-columns: 1fr;
       grid-template-rows: 0.2fr 3fr;
       grid-template-areas:
@@ -456,8 +429,8 @@ h4{
 
   @media only screen and (max-width: 1200px){
     body {
-      overflow-y: scroll; /* Hide vertical scrollbar */
-      overflow-x: scroll; /* Hide horizontal scrollbar */
+      overflow-y: hidden; /* Hide vertical scrollbar */
+      overflow-x: hidden; /* Hide horizontal scrollbar */
     }
     .outer-wrapper {
       margin: 10px;
@@ -476,8 +449,7 @@ h4{
       height: fit-content;
       max-height: 66.4vh;
       margin-top: 22px;
-      margin: 5px;
-      text-align: center;
+      margin: 15px;
       padding-bottom: 20px;
       
     }
@@ -498,9 +470,8 @@ h4{
 
 /* popup modal for create account */
 .reg-container{
-  background-color: #1D5D9B;
-  width: 700px;
- 
+  background-color: #24146C;
+  width: 500px;
   border-radius: 15px;
   padding: 10px;
   margin: 10px;
@@ -513,13 +484,28 @@ h4{
   display: none;
 
 }
+/* popup modal for create account */
+#cal-date{
+  border: none;
+    padding: 5px;
+    margin: 5px;
+    width: 30px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(223, 217, 217);
+    font-weight: bold;
+    cursor: pointer;
+}
+
 .container-modal{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email{
   text-align: start;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   color: black;
 }
 textarea {
@@ -530,33 +516,29 @@ textarea {
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
+
 
 input {
   padding: 10px;
   margin-bottom: 10px;
-  width: 50%;
+  width: 100%;
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
-  font-size: 12px;
+  font-size: 14px;
   
 }
+
 #input{
   display: block;
  
 }
 #btnRegister{
-  width: 170px;
-  height: 40px;
+  width: 100px;
+  height: 30px;
   display: block;
   margin: 10px auto; 
   padding: 5px 10px;
@@ -564,37 +546,22 @@ input {
   color: #000000;
   border: 5px;
   border-radius: 15px;
-  font-size: 12px;
+  font-size: 15px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
   cursor: pointer;
   text-align: center;
   margin-top: 30px;
 }
-#radio-btn{
-    font-size: 12px;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
- 
-}
-
-#radio-btn input[type="radio"] {
-    margin-right: 10px;
-  }
 #create-txt{
   text-align: center;
-  margin-top: 20px;
   margin-bottom: 20px;
   font-size: 30px;
   color: white;
   
 }
 label{
-  font-size: 12px;
+  font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
@@ -609,8 +576,8 @@ label{
 }
 /* popup modal for edit account */
 .edit-container{
-  background-color: #1D5D9B;
-  width: 700px;
+  background-color: #24146C;
+  width: 500px;
   border-radius: 15px;
   padding: 10px;
   margin: 10px;
@@ -623,23 +590,13 @@ label{
   display: none;
 
 }
-#radio-btn2{
-    font-size: 12px;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
- 
-}
 .container-modal-edit{
   background-color: #1D5D9B;
 }
 #email1{
   text-align: start;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12px;
+  font-size: 14px;
   color: black;
 }
 textarea {
@@ -650,7 +607,7 @@ textarea {
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 #password{
@@ -660,12 +617,7 @@ textarea {
   height: 150px;
 }
 
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
+
 input {
   padding: 10px;
   margin-bottom: 10px;
@@ -673,7 +625,7 @@ input {
   background-color: white;
   box-sizing: border-box;
   border-radius: 10px;
-  font-size: 12px;
+  font-size: 14px;
   
 }
 
@@ -681,7 +633,7 @@ input {
   display: block;
  
 }
-#btnEditPromo{
+#btnEdit{
   width: 100px;
   height: 30px;
   display: block;
@@ -700,14 +652,13 @@ input {
 }
 #edit-txt{
   text-align: center;
-  margin-top: 20px;
   margin-bottom: 20px;
   font-size: 30px;
   color: white;
   
 }
 label{
-  font-size: 12px;
+  font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: white;
 }
@@ -837,7 +788,7 @@ label{
   box-shadow: 5px 5px 5px rgb(70, 69, 69);
   color: black;
   padding: 20px;
-display: none;
+   visibility: hidden; 
 
   position: fixed;
   top: 50%;
@@ -893,28 +844,11 @@ display: none;
   transition: transform 0.4s, top 0.4s;
   display: none;
 }
-#cnfrm_edit{
-  width: 550px;
-  /* height: 200px; */
-  background-color: white;
-  user-select: none;
-  border: 1px solid #b3b3b3;
-  box-shadow: 5px 5px 5px rgb(70, 69, 69);
-  color: black;
-  padding: 20px;
-
-
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-}
 .cnfrm_modal h1, #delete_acc_modal h1{
   letter-spacing: 3px;
   text-align: center;
 }
-#cnl_promo{
+#cnl2{
   margin-left: 300px;
 }
 .cnl{
@@ -940,3 +874,12 @@ display: none;
 .btn{
     display: flex;
 }
+input[type="text"], input[type="date"], textarea {
+  text-transform: uppercase;
+}
+#dash-logo {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 35px;
+  font-weight: bolder;
+  color: #1D5D9B;}
+  
