--- a/CSS/registration.css
+++ b/CSS/registration.css
@@ -10,9 +10,12 @@ body {
 }
 
 .reg-container {
-    width: 450px;
+    width: 400px;
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
+    margin: 5px;
+    margin-top: 115px;
+    height: 550px;
     background-color: #24146C; 
     text-align: center;
 }
@@ -34,7 +37,7 @@ img.center-image {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #FBEEAC;
+    background-color: white;
     box-sizing: border-box;
     border-radius: 10px;
     font-size: 14px;
@@ -65,7 +68,7 @@ button, #btnLogin,  #logout-btn {
     height: 30px;
     margin: 10px auto; 
     padding: 5px 10px;
-    background-color: #F3F709;
+    background-color: white;
     color: #000000;
     border: none;
     border-radius: 15px;
@@ -79,7 +82,7 @@ button, #btnLogin,  #logout-btn {
     height: 30px;
     margin: 10px auto; 
     padding: 5px 10px;
-    background-color: #F3F709;
+    background-color: white;
     color: #000000;
     border: none;
     border-radius: 15px;
@@ -90,7 +93,7 @@ button, #btnLogin,  #logout-btn {
 }
 
 #register {
-    background-color: #F3F709;
+    background-color: white;
     width: 100%;
     height: 60px;
     display: flex;
@@ -116,7 +119,7 @@ label {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #F3F709;
+    color: white;
     font-size: 30px;
 }
 #vigan{
