--- a/CSS/rev_hotel.css
+++ b/CSS/rev_hotel.css
@@ -1,27 +1,52 @@
 
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #24146C;
+  font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+.sidenav h2, .sidenav a {
+  color: white;
+}
+
+.nav-pills > li > a {
+  color: #24146C;
+}
+
+.nav-pills > li.active > a, 
+.nav-pills > li.active > a:focus 
+{
+  background-color: #24146C;
+  color: white;
+}
+.nav-pills > li.active > a:hover {
+  background-color: #24146C;
+  color: white;
+}
+
 .dropdown-container {
-  color: #1D5D9B;
- 
+  color: #24146C;
+  text-align: end;
   display: none;
 }
 
 .dropdown-container a {
   text-decoration: none;
-  color: #1D5D9B;
+  color: #24146C;
+  text-align: end;
 }
 
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
   font-size: 14px;
-  color: #1D5D9B;
+  color: #24146C;
   display: block;
   border: none;
   background: none;
@@ -45,7 +70,9 @@
 }
 
 .dropdown-container {
-  padding-left: 8px;
+  padding-right: 8px;
+  text-align: end;
+
 }
 
 .sidebar-responsive {
@@ -94,10 +121,6 @@ th, tr, td {
   text-decoration: none;
   
 }
-.con-lic:hover, .con-mv:hover {
-  background-color: gainsboro;
-  color: #1D5D9B;
-}
 .icon-spacing {
   margin-right: 10px; /* Adjust the value as needed */
 }
@@ -114,7 +137,7 @@ th, tr, td {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: #1D5D9B;}
+  color: #24146C;}
   
 .con-lic {
   display: flex;
@@ -125,10 +148,14 @@ th, tr, td {
   margin-right: 10px; /* Space between the icons and the text */
 }
 
+.con-lic:hover, .con-mv:hover {
+  background-color: gainsboro;
+  color: #24146C;
+}
+
 .dropdown-container.show {
   display: block;
 }
-
   .material-icons-outlined {
     vertical-align: middle;
     line-height: 1px;
@@ -241,43 +268,7 @@ list-style: none;
 padding: 10px 20px 10px 10px;
 display: none;
 }
-/*.dropdown-container{
-color: #e6e8ed;
-padding-top: 10px;
-margin-top: 20px;
-}
-.dropdown-container .con-lic, .dropdown-container .con-mv{
-padding: 20px 15px 0px 20px;
-margin-top: -20px;
-}
-.dropdown-container a{
-  text-decoration: none;
-  color: white;
-}
-.sidebar-list-item1 button{
-  padding: 20px 15px 20px 20px;
-  text-decoration: none;
-  font-size: 16px;
-  color: white;
-  display: block;
-  border: none;
-  background: none;
-  width:100%;
-  text-align: left;
-  cursor: default;
-  outline: none;
-}
 
-/* On mouse-over */
-/*.dropdown-btn:hover {
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-lic:hover{
-background-color: rgba(255, 255, 255, 0.2);
-}
-.con-mv:hover {
-background-color: rgba(255, 255, 255, 0.2); 
-}
 /* Main content */
 .main {
 margin-left: 200px; /* Same as the width of the sidenav */
@@ -376,7 +367,7 @@ th, tr, td{
     text-transform: uppercase;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: #1D5D9B; 
+    background-color: #24146C; 
     color: white;
     cursor: pointer;
 }
@@ -397,7 +388,7 @@ h4{
   cursor: pointer;
 }
 .selected-row{
-  background-color: #1D5D9B !important;
+  background-color: #24146C !important;
   color: white;
 }
 #srchText{
@@ -500,7 +491,7 @@ h4{
 
 /* popup modal for create account */
 .reg-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -515,7 +506,7 @@ h4{
 
 }
 .container-modal{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email{
   text-align: start;
@@ -595,7 +586,7 @@ label{
 }
 /* popup modal for edit account */
 .edit-container{
-  background-color: #1D5D9B;
+  background-color: #24146C;
   width: 500px;
   border-radius: 15px;
   padding: 10px;
@@ -610,7 +601,7 @@ label{
 
 }
 .container-modal-edit{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email1{
   text-align: start;
