--- a/CSS/events.css
+++ b/CSS/events.css
@@ -181,10 +181,12 @@ th, tr, td {
   body{
     display: block;
 }
-.sidenav{
+
+.sidenav {
+ 
+  height: 160%;
   color: black;
   font-size: 14px;
-  
 }
 @media screen and (max-width: 600px) {
   .column {
@@ -591,7 +593,7 @@ label{
 
 }
 .container-modal-edit{
-  background-color: #1D5D9B;
+  background-color: #24146C;
 }
 #email1{
   text-align: start;
@@ -881,5 +883,5 @@ input[type="text"], input[type="date"], textarea {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: #1D5D9B;}
+  color: #24146C;}
   
