--- a/CSS/souvenir.css
+++ b/CSS/souvenir.css
@@ -881,5 +881,5 @@ input[type="text"], input[type="date"], textarea {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: #1D5D9B;}
+  color: #24146C;}
   
