--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -166,8 +166,10 @@ th, tr, td {
     display: block;
 }
 .sidenav{
+  height: 160%;
   color: black;
   font-size: 14px;
+
   
 }
 @media screen and (max-width: 600px) {
@@ -865,5 +867,5 @@ input[type="text"], input[type="date"], textarea {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 35px;
   font-weight: bolder;
-  color: #1D5D9B;}
+  color: #24146C;}
   
