--- a/CSS/souvenir.css
+++ b/CSS/souvenir.css
@@ -70,7 +70,10 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
-
+.selected-row {
+  background-color: gainsboro !important;
+  color: white;
+}
 
 
 .dropdown-btn {
