--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -25,19 +25,32 @@
   background-color: #24146C;
   color: white;
 } 
+.fa,
+.fas,
+.far {
+  color: #24146C;
+  font-size: 18px;
+}
 
+
+
+#visited i {
+  margin-right: 8px; /* Space between icon and text */
+}
 
 .card {
   background-color: aliceblue;
+      
   border: 2px solid #24146C;
   border-radius: 10px;
-  box-shadow: 1 5px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 5 85px 5px gainsboro;
   padding: 10px;
   margin: 8px;
   font-size: 12px;
-  text-align:center;
+  text-align: center;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 .card h4, .card p {
   color: black;
@@ -45,6 +58,8 @@
 
 .well {
   background-color: #24146C;
+  width: 890px;
+  height: 500px;
   color: white;
 }
 
@@ -58,11 +73,11 @@
 }
 
 #dash_label {
-  color: black;
+  color: #24146C;
   font-weight: bolder;
   font-size: 40px;
   padding: 5px;
-  background-color: gainsboro;
+  background-color: whitesmoke;
 
   margin: 20px 0;
 }
@@ -373,9 +388,7 @@ button{
  }
 
     
- .well{
-  width: 820px;
- }
+ 
 .icon-heading {
   font-size: 14px;
 }
@@ -384,14 +397,7 @@ button{
   font-size: 14px;
 }
 
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-}
 #mostVisitedChart{
   width: 1500px;
   
@@ -501,14 +507,14 @@ padding-left: 8px;
   .main-container {
     grid-area: main;
     overflow-y: auto;
-    padding: 20px 20px;
+   
     background-color: white;
     height: 100%;
     position: fixed;
     overflow-x: hidden;
       grid-area: main;
       overflow-y: auto;
-      padding: 20px 20px;
+     
     
   }
   
@@ -543,19 +549,7 @@ th, tr, td{
 .btn_useracc{
   display: flex;
 }
-#archived_acc{
-    border: none;
-    padding: 5px;
-    margin: 5px;
-    width: 120px;
-    border-radius: 5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    background-color: #24146C; 
-    color: white;
-    cursor: pointer;
-}
+
 tr th, tr th{
     background-color: gainsboro;
    
@@ -669,47 +663,13 @@ tr th, tr th{
 
     
   }
+}
  
-  /* Extra Small <= 576px */
-  @media screen and (max-width: 576px) {
-    .header-left {
-      display: none;
-    }
-  }
-}
+ 
 
-
-/* popup modal for create account */
-.reg-container{
-  background-color: #24146C;
-  width: 500px;
-  border-radius: 15px;
-  padding: 10px;
-  margin: 10px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.4s, top 0.4s;
-  border-radius: 10px;
-  display: none;
-
-}
 .container-modal{
   background-color: #24146C;
 }
-
-
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
-
-
-
-
 
 label{
   font-size: 14px;
@@ -718,12 +678,6 @@ label{
 }
 
 
-.dashboard-container {
-  margin: 50px auto;
-  padding: 20px;
-  border-radius: 5px;
- 
-}
 
 .btn button{
 	padding: 4px;
