--- a/CSS/tourist.css
+++ b/CSS/tourist.css
@@ -55,7 +55,12 @@
   
 }
 
-
+.fa,
+.fas,
+.far {
+  color: #24146C;
+  font-size: 16px;
+}
 
 .dropdown-btn {
 
@@ -873,3 +878,20 @@ input[type="text"], input[type="date"], textarea {
   font-weight: bolder;
   color: #24146C;}
   
+    /* Ensure the modal itself is not blurred */
+.modal {
+  position: fixed;
+  z-index: 1001; /* Ensure it is on top of other content */
+  /* Add other styling properties for the modal */
+}
+
+/* Apply blur to background */
+.blur-background {
+  filter: blur(5px); /* Adjust the blur intensity as needed */
+  /* Ensure this class applies to the correct background element */
+}
+
+/* Ensure the background element covers the whole page */
+#table {
+  position: relative;
+}
