--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   color: black;
   font-weight: bold;
+  font-size: 16px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -154,7 +155,8 @@
   outline: none;
 }
 .container-fluid{
-  font-size: 16px;
+  font-size: 14px;
+  padding: 0; /* Remove padding */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   
 }
@@ -422,12 +424,14 @@ button{
   
  /* ---------- SIDEBAR ---------- */
   
- #sidebar {
+ #sidenav {
   grid-area: sidebar;
   height: 100%;
-  background-color: #032d89;
+  background-color: gainsboro;
   color: white;
   
+  height: 160%;
+
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
 }
