--- a/CSS/restaurants.css
+++ b/CSS/restaurants.css
@@ -6,22 +6,6 @@
   font-weight: bold;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.row {
-  margin-right: -15px;
-  margin-left: -15px;
-}
-.row.content {
-  height: 400px;
-}
-#row-content{
-  font-size: 14px;
-  font-family: system-ui, 
-  -apple-system, BlinkMacSystemFont, 
-  'Segoe UI', Roboto, Oxygen, Ubuntu, 
-  Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-
-}
 .sidenav h2, .sidenav a {
   color: white;
 }
@@ -71,7 +55,12 @@
   
 }
 
-
+.fa,
+.fas,
+.far {
+  color: #24146C;
+  font-size: 16px;
+}
 
 .dropdown-btn {
 
@@ -182,9 +171,15 @@ th, tr, td {
     display: block;
 }
 .sidenav{
+  height: 160%;
   color: black;
   font-size: 14px;
+
   
+}
+  .selected-row {
+    background-color: gainsboro !important;
+    color: white;
 }
 @media screen and (max-width: 600px) {
   .column {
@@ -883,3 +878,20 @@ input[type="text"], input[type="date"], textarea {
   font-weight: bolder;
   color: #24146C;}
   
+    /* Ensure the modal itself is not blurred */
+.modal {
+  position: fixed;
+  z-index: 1001; /* Ensure it is on top of other content */
+  /* Add other styling properties for the modal */
+}
+
+/* Apply blur to background */
+.blur-background {
+  filter: blur(5px); /* Adjust the blur intensity as needed */
+  /* Ensure this class applies to the correct background element */
+}
+
+/* Ensure the background element covers the whole page */
+#table {
+  position: relative;
+}
