--- a/CSS/dash.css
+++ b/CSS/dash.css
@@ -3,10 +3,12 @@
   padding: 0;
   box-sizing: border-box;
   color: black;
-  font-weight: bold;
+  
   font-size: 16px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+
+
 
 
 .sidenav h2, .sidenav a {
@@ -19,17 +21,17 @@
 .nav-pills > li.active > a, 
 .nav-pills > li.active > a:focus 
 {
-  background-color: #24146C;
+  background-color: #337ab7;
   color: white;
 }
 .nav-pills > li.active > a:hover {
-  background-color: #24146C;
+  background-color: #337ab7;
   color: white;
 } 
 .fa,
 .fas,
 .far {
-  color: #24146C;
+  color: #337ab7;
   font-size: 18px;
 }
 
@@ -39,18 +41,21 @@
   margin-right: 8px; /* Space between icon and text */
 }
 
+/* Continue updating the rest */
 .card {
   background-color: aliceblue;
-      
-  border: 2px solid #24146C;
+  border: 2px solid #337ab7;
   border-radius: 10px;
   box-shadow: 5 85px 5px gainsboro;
   padding: 10px;
   margin: 8px;
   font-size: 12px;
   text-align: center;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
+
+/* Similarly, update other font-family properties */
+
 
 
 .card h4, .card p {
@@ -58,7 +63,7 @@
 }
 
 .well {
-  background-color: #24146C;
+  background-color: #337ab7;
   width: 890px;
   height: 500px;
   color: white;
@@ -74,7 +79,7 @@
 }
 
 #dash_label {
-  color: #24146C;
+  color: #337ab7;
   font-weight: bolder;
   font-size: 40px;
   padding: 5px;
@@ -115,13 +120,13 @@
 }
 
 .btn-primary {
-  background-color: #24146C; /* Attractive blue color */
-  border-color: #24146C; /* Match button border with color */
+  background-color: #337ab7; /* Attractive blue color */
+  border-color: #337ab7; /* Match button border with color */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
 }
 
 .btn-primary:hover {
-  background-color: #24146C; /* Darker blue on hover */
+  background-color: #337ab7; /* Darker blue on hover */
   border-color: #004085; /* Darker border on hover */
 }
 
@@ -130,22 +135,22 @@
 }
 
 .dropdown-container {
-  color: #24146C;
+  color: #337ab7;
  
   display: none;
 }
 
 .dropdown-container a {
   text-decoration: none;
-  color: #24146C;
+  color: #337ab7;
 }
 
 .sidebar-list-item1 button {
   padding: 15px;
   text-decoration: none;
   font-size: 16px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #24146C;
+  font-family: 'Poppins', sans-serif;
+  color: #337ab7;
   display: block;
   border: 9px;
   background: none;
@@ -157,17 +162,17 @@
 .container-fluid{
   font-size: 14px;
   padding: 0; /* Remove padding */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
   
 }
 .container-fluid:hover{
   font-size: 18px;
   
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
   
 }
 ul,li,a{
-  color: #24146C;
+  color: #337ab7;
 }
 
 
@@ -257,7 +262,7 @@ th, tr, td {
 
 .con-lic:hover, .con-mv:hover {
   background-color: gainsboro;
-  color: #24146C;
+  color: #337ab7;
 }
 
 .dropdown-container.show {
@@ -265,7 +270,7 @@ th, tr, td {
 }
 
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
     margin: 1.5%;
     padding: 5px;
     
@@ -275,19 +280,16 @@ body{
 }
 #row-content{
   font-size: 14px;
-  font-family: system-ui, 
-  -apple-system, BlinkMacSystemFont, 
-  'Segoe UI', Roboto, Oxygen, Ubuntu, 
-  Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
 
 
 }
 
 h2{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
     font-size: 50px;
     font-weight: bolder;
-    color: #24146C;
+    color: #337ab7;
 }
 h4{
 
@@ -300,14 +302,14 @@ p{
 
   font-size: 16px;
  
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
  
 }
 #dash-logo{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
     font-size: 35px;
     font-weight: bolder;
-    color: #24146C;  
+    color: #337ab7;  
 }
 .sidenav{
     color: black;
@@ -318,8 +320,7 @@ p{
 
 h1{
     font-size: 14px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    font-family: 'Poppins', sans-serif;
 }
 .mybutton{
     text-align: center;
@@ -339,12 +340,10 @@ h1{
     padding: 4px 2px;
 }
 .label{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  font-family: 'Poppins', sans-serif;
 }
 .div{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+  font-family: 'Poppins', sans-serif;
 }
 button{
     text-align: center;
@@ -354,7 +353,7 @@ button{
 @media screen and (max-width: 1000px) {
   .column {
     width: 1000px;
-    border: #24146C;
+    border: #337ab7;
     display: block;
    
   }
@@ -567,7 +566,7 @@ tr th, tr th{
  }
 
 .selected-row{
-  background-color: #24146C !important;
+  background-color: #337ab7 !important;
   color: white;
 }
 #srchText{
@@ -668,16 +667,21 @@ tr th, tr th{
     
   }
 }
- 
+.fa,
+.fas,
+.far {
+  color: #184267;
+  font-size: 16px;
+}
  
 
 .container-modal{
-  background-color: #24146C;
+  background-color: #337ab7;
 }
 
 label{
   font-size: 14px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
   color: white;
 }
 
