--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     background-color: white;
@@ -16,8 +16,8 @@ body {
     padding: 15px;
     margin: 15px;
     margin-top: 115px;
-    height: 500px;
-    background-color: #24146C; 
+    height: 400px;
+    background-color: #337ab7; 
     text-align: center;
 }
 .column{
